--- a/style.css
+++ b/style.css
@@ -1,11 +1,7 @@
 button {
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
 }
-.active {
-    background-color: red;
-}
-
 .bomb {
-    background-color: black;
+    background: url("images/bomb.png") no-repeat center;
 }
